--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<img src="ChatGPT oakbarrel-coming-soon..." alt="Oak Barrel Tap Room Coming Soon">
+<img src="ChatGPT Image oakbarrel-coming-soon.png">
 
 </body>
 </html
