--- a/index.html
+++ b/index.html
@@ -311,7 +311,50 @@
         </div>
       </article>
 
-      <section id="tap-list" class="anchor"></section>
+      <section id="tap-list" class="anchor">
+  <article style="
+    margin-top: 26px;
+    background: linear-gradient(145deg, #151821, #0c0d12);
+    border-radius: 18px;
+    padding: 18px 16px;
+    box-shadow: 0 12px 28px rgba(0,0,0,0.6);
+    border: 1px solid rgba(255,255,255,0.04);
+  ">
+    <h2 style="
+      font-size: 0.95rem;
+      text-transform: uppercase;
+      letter-spacing: 0.18em;
+      color: #b0b2bd;
+      margin-bottom: 8px;
+    ">
+      Preview Tap List
+    </h2>
+
+    <p style="font-size: 0.9rem; color: #f5e2b8; margin-bottom: 10px;">
+      A first taste of how Oak Barrel pours: clean lines, cold glass, heavy country pours.
+    </p>
+
+    <ul style="list-style: none; padding: 0; margin: 0;">
+      <li style="padding: 10px 0; border-bottom: 1px solid rgba(255,255,255,0.06);">
+        <div style="font-weight: 600; font-size: 0.95rem;">Central Valley Lager · 5.0%</div>
+        <div style="font-size: 0.85rem; color: #b0b2bd;">Crisp, easy-drinking, built for regulars who stay awhile.</div>
+      </li>
+      <li style="padding: 10px 0; border-bottom: 1px solid rgba(255,255,255,0.06);">
+        <div style="font-weight: 600; font-size: 0.95rem;">Country Strong IPA · 6.8%</div>
+        <div style="font-size: 0.85rem; color: #b0b2bd;">Bold West Coast hops with a smooth finish – pours like the name.</div>
+      </li>
+      <li style="padding: 10px 0;">
+        <div style="font-weight: 600; font-size: 0.95rem;">Oak Barrel Amber · 5.5%</div>
+        <div style="font-size: 0.85rem; color: #b0b2bd;">Malty, smooth, and made to pair with good stories at the bar.</div>
+      </li>
+    </ul>
+
+    <p style="margin-top: 12px; font-size: 0.82rem; color: #b0b2bd;">
+      *Final tap list will feature rotating local brews, guest taps, and seasonal pickups from around the Valley.*
+    </p>
+  </article>
+</section>
+
       <section id="merch" class="anchor"></section>
       <section id="events" class="anchor"></section>
       <section id="story" class="anchor"></section>
